src/styles/global.css
img {
  height: 100%;
  max-width: 100%;
}

nav,
main {
  max-width: 1450px;
  margin: 0 auto;
}

