Fix white space after (inline) media elements

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,9 @@
+:where(audio, canvas, iframe, img, svg, video) {
+  vertical-align: middle;
+}
+
 img {
-  height: 100%;
+  height: auto;
   max-width: 100%;
 }
 
